hphp/test/zend/bad/ext/simplexml/tests/001.php
<?php 

var_dump(simplexml_load_file(dirname(__FILE__).'/sxe.xml'));

?>
===DONE===